--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "commitlint": "^7.6.1",
+    "dayjs": "^1.8.14",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "eslint-plugin-security": "^1.4.0",
@@ -44,7 +45,6 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "socket.io-client": "^2.2.0",
-    "styled-components": "^4.2.0",
     "tailwindcss": "^1.0.0",
     "webpack": "^4.32.2"
   },
